examples/negative/ffi/extern_pub_qualifier.kai
# Negative fixture (#520 / FFI): `pub extern "C" fn` mixes the
# pub qualifier with an FFI declaration. The top-level grammar
# does not accept that ordering — `pub` is a fn modifier, but
# `extern "C" fn` is an axiom desugar. Parser must reject.

pub extern "C" fn puts(s: String) : Int / Ffi

fn main() : Int / Ffi = puts("hi")
